k8s/deployment_dev.yaml
#Kubernetes deployment for Track API application pods
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ensembl-track-api-deployment-<BRANCH_NAME> #Filled by CI/CD job
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ensembl-track-api
    spec:
      imagePullSecrets:
        - name: ensemblweb-pull-secret
      containers:
      - name: ensembl-track-api
        image: <DOCKER_IMAGE> #Filled by GitLab CI/CD job
        command: ["gunicorn"]
        args: ["--bind=0.0.0.0:8012", "--preload", "ensembl_track_api.wsgi:application"]
        ports:
        - containerPort: 8012
        imagePullPolicy: Always
