k8s/db_service.yaml
#Kubernetes service for exposing Track API database host in HH cluster
kind: Service
apiVersion: v1
metadata:
  name: ensweb-trackapi-db-svc
spec:
  type: ExternalName
  externalName: <DB_HOST> #Filled/applied manually
