k8s/db_service_hh.yaml
#Kubernetes service for exposing Track API database host in HH cluster
kind: Service
apiVersion: v1
metadata:
  name: ensweb-trackapi-db-svc
spec:
  type: ExternalName
  externalName: pgsql-hlvm-011.ebi.ac.uk
