k8s/ensembl_track_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ensembl-track-api-svc
  labels:
    app: ensembl-track-api-svc
spec:
  selector:
    app: ensembl-track-api
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8012
