k8s/service.yaml
#Kubernetes service for exposing incoming port for Track API app pods
apiVersion: v1
kind: Service
metadata:
  name: ensembl-track-api-svc
  labels:
    app: ensembl-track-api-svc
spec:
  selector:
    app: ensembl-track-api
  type: ClusterIP
  ports:
    - name: track-api
      port: 8012
      protocol: TCP
      targetPort: 8012
