k8s/ingress.yaml
#Ingress for routing Track API live URL
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ensembl-track-api-ingress
spec:
  rules:
  - host: beta.ensembl.org #edit for internal/staging (applied manually)
    http:
      paths:
      - backend:
          serviceName: ensembl-track-api-svc
          servicePort: 8012
        path: /api/tracks/(.*)
